public/css/main.css
:root {
    --blue: #1D9BF0;
    --blueLight: #9BD1F9;
    --blueBackground: rgba(190, 200, 255, 0.6);
    --buttonHoverBg: #d4edff;
    --lightGrey: rgb(230, 236, 240);
    --spacing: 15px;
    --greyText: rgb(101, 119, 134);
    --greyButtonText: rgba(0,0,0,0.34);
    --red: rgb(224, 36, 94);
    --redBackground: rgba(224, 36, 94, 0.25);
    --green: rgb(23, 191, 99);
    --greenBackground: rgba(23, 191, 99, 0.25);
}

* {
    outline: none !important;
}

a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    color: inherit;
}

h1 {
    font-size: 19px;
    font-weight: 800;
    margin: 0;
}

nav {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    height: 100%;
}

nav a {
    padding: 10px;
    font-size: 30px;
    width: 55px;
    height: 55px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #212529;
}

nav a.blue {
    color: var(--blue);
}

nav a:hover {
    background-color: var(--buttonHoverBg);
    text-decoration: none;
    color: var(--blue);
    border-radius: 50%;
}

.wrapper > .row {
    margin: 0;
}

button {
    background-color: transparent;
    border: none;
    color: var(--greyButtonText);
}

button i,
button span {
    pointer-events: none;
}

.mainSectionContainer {
    padding:  0;
    border-left: 1px solid var(--lightGrey);
    border-right: 1px solid var(--lightGrey);
    display: flex;
    flex-direction: column;
}

.titleContainer {
    height: 53px;
    padding: 0 var(--spacing);
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--lightGrey);
    flex-shrink: 0;
}

.titleContainer h1 {
    flex: 1;
}

.postFormContainer {
    display: flex;
    padding: var(--spacing);
    border-bottom: 10px solid rgb(230, 236, 240);
    flex-shrink: 0;
}

.modal .postFormContainer {
    border: none;
    padding: 0;
    padding-top: var(--spacing);
}

.modal .post {
    padding: 0 0 var(--spacing) 0;
}

.userImageContainer {
    width: 50px;
    height: 50px;
}

.userImageContainer img {
    width: 100%;
    border-radius: 50%;
    background-color: white;
}
.textareaContainer {
    flex: 1;
    padding-left: var(--spacing);
}

.textareaContainer textarea {
    width: 100%;
    border: none;
    resize: none;
    font-size: 19px;
}

#submitPostButton {
    background-color: var(--blue);
    color: white;
    border: none;
    border-radius: 40px;
    padding: 7px 15px;
}

#submitPostButton:disabled {
    background-color: var(--blueLight);
}

.post {
    display: flex;
    flex-direction: column;
    padding: var(--spacing);
    cursor: pointer;
    border-bottom: 1px solid var(--lightGrey);
    flex-shrink: 0;
}

.mainContentContainer {
    flex: 1;
    display: flex;
}

.postContentContainer {
    padding-left: var(--spacing);
    display: flex;
    flex-direction: column;
    flex: 1;
}

.displayName {
    font-weight: bold;
}

.username,
.date,
.datePlaceholder {
    color: var(--greyText)
}

.displayName {
    font-weight: bold;
}

.postFooter {
    display: flex;
    align-items: center;
}

.postFooter .postButtonContainer {
    flex: 1;
    display: flex;
}

.postFooter .postButtonContainer button {
    padding: 4px 7px;
}

.header a:hover {
    text-decoration: underline;
}

.postActionContainer a:hover {
    text-decoration: underline;
}

.header a,
.header span {
    padding-right: 0px;
}

.postButtonContainer button:hover {
    background-color: var(--buttonHoverBg);
    color: var(--blue);
    border-radius: 50%;
}

.postButtonContainer.red button.active {
    color: var(--red);
}

.postButtonContainer.green button.active {
    color: var(--green);
}

.postButtonContainer.green button:hover {
    color: var(--green);
    background-color: var(--greenBackground);
}

.postButtonContainer.red button:hover {
    color: var(--red);
    background-color: var(--redBackground);
}

.postActionContainer {
    padding-left: 45px;
    font-size: 13px;
    color: var(--greyText);
    margin-bottom: 5px;
}

.replyFlag {
    margin-bottom: 5px;
    color: var(--greyText);
}

.replyFlag a {
    color: var(--blue);
}

.wrapper {
    max-width: 100% !important;
    overflow-x: hidden !important;
}

.header .date {
    flex: 1;
}

.header .datePlaceholder {
    flex: 1;
}

.header {
    display:flex;
}

@media screen and (max-width: 440px){
    .header {
        font-size: 11px }
    .replyFlag {
        font-size: 13px }
    .col-2 {
        max-width:20% !important }
    .col-10 {
        max-width: 80% }
}

.date {
    display: none;
}

.datePlaceholder {
    display: inherit;
}

@media only screen and (min-width: 768px) {
    .date {
        display: inherit;
    }
    .datePlaceholder {
        display: none;
    }
}

.profileHeaderContainer .coverPhotoSection {
    height: 320px;
    background-color: var(--blue);
    position:relative;
}

.profileHeaderContainer .userImageContainer {
    height: 120px;
    width: 120px;
    margin-left: 30px;
    position: absolute;
    bottom:-60px;

    display: flex;
    align-items: center;
        justify-content: center;
}

.profileHeaderContainer .userImageContainer img {
    border: 4px solid #ffffff;
}

.profileHeaderContainer .profileButtonsContainer {
    text-align: right;
    padding: var(--spacing);
    min-height: 60px;
}
.profileButton, .followButton {
    border: 1px solid var(--blue);
    color: var(--blue);
    font-weight: bold;
    padding: 5px 10px;
    border-radius: 60px;
    display: inline-block;
    margin-left: var(--spacing);
    min-height:36px;
    min-width:38px;
}

.profileButton:hover, .followButton:hover {
    background-color: var(--blueBackground);
    color: var(--blue);
}

.followButton span {
    margin-left:0.3em
}

.followButton.following {
    color: white;
    background-color: var(--blue);
}

.profileHeaderContainer .userDetailsContainer {
    display: flex;
    flex-direction:column;
    padding: 0 1.5em
}

.followersContainer .value {
    font-weight: bold;
    margin: bold;
    margin-right: 5px;
}

.followersContainer span:not(.value) {
    color:var(--greyText);
}

.followersContainer a {
    margin-right: var(--spacing);
}

.followersContainer a:hover {
    text-decoration: none;
    border-bottom: 1px solid var(--greyText);
}

.tabsContainer {
    display: flex;
    border-bottom: 1px solid var(--lightGrey);
    flex-shrink: 0;
}

.tab {
    flex: 1;
    height: 52px;
    display:flex;
    justify-content: center;
    align-items: center;
    color: var(--greyText);
    font-weight: bold;
}

.tab.active {
    color: black;
    border-bottom: 2px solid black
}

.tab:hover {
    color: black;
    background-color: #eeeeee 
}

.noResults {
    font-weight:bold;
    display:flex;
    justify-content: center;
    padding:var(--spacing)
}

.resultsContainer {
    display: flex;
    flex-direction: column;
}
.resultsContainer .user {
    padding: var(--spacing);
    display:flex;
    border-bottom: 1px solid var(--lightGrey);
}

.user .userDetailsContainer {
    flex: 1;
    padding: 0 var(--spacing);
}

.user .userDetailsContainer .header .username {
    padding-left: 7px;
}

.profilePictureButton, .coverPhotoButton {
    position:absolute;
    font-size:50px;
    color: rgb(0,0,0,0.6);
    display:none;
}

.userImageContainer:hover .profilePictureButton, 
.coverPhotoContainer:hover > .coverPhotoButton {
    display: block;
}

.coverPhotoSection .userImageContainer img {
    min-height:120px;
}

.coverPhotoContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    height:100%
}
.coverPhotoContainer img {
    width:100%;
    height:100%;
    object-fit:cover;
}

.postBody span {
    word-wrap: break-word;
    word-break: break-word;
}

.pinButton:hover {
    color: #E7B10A;
}

.unpinButton {
    color: #E7B10A;
}

.unpinButton:hover {
    color: #FF0000;
}

.deleteButton:hover {
    color: #FF0000;
}

.pinnedPostContainer {
    border-bottom: 10px solid rgb(230, 236, 240)
}

.searchBarContainer {
    position:relative;
    color: var(--greyText);
    padding:10px var(--spacing);
}

.searchBarContainer i {
    position: absolute;
    top:20px;
    left:30px;
}

.searchBarContainer #searchBox {
    height: 36px;
    width:100%;
    padding:5px 15px 5px 40px;
    border-radius:50px;
    border: none;
    background-color:var(--lightGrey);
    color:var(--greyText);
    
}

#imagePreview,
#coverPreview{
    display: block;
    max-width:100%;
    width:100%;
}

